{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 460,
  "lineage": "6b7f4019-2fb2-5274-250d-d5e937e76185",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094458522773:security-group/sg-022cda4037aa7764a",
            "description": "Control traffic to/from RDS Aurora dev-naesb-dlt",
            "egress": [],
            "id": "sg-022cda4037aa7764a",
            "ingress": [],
            "name": "dev-naesb-dlt-20250807233236543000000001",
            "name_prefix": "dev-naesb-dlt-",
            "owner_id": "094458522773",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-naesb-dlt",
              "app": "naesb-dlt",
              "owner": "dev"
            },
            "tags_all": {
              "Name": "dev-naesb-dlt",
              "app": "naesb-dlt",
              "owner": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-016db0b3da943c5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.3.0/24",
              "10.26.4.0/24",
              "10.25.2.0/27",
              "10.25.3.0/27",
              "10.25.4.0/27",
              "10.25.5.0/27",
              "10.26.1.0/24",
              "10.26.2.0/24"
            ],
            "description": "From allowed CIDRs",
            "from_port": 5432,
            "id": "sgrule-4072698284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-022cda4037aa7764a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.consul",
            "module.db.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.db.module.migration_lambda",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094458522773:security-group/sg-043777a444b1ebeb3",
            "description": "Secure db migration lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043777a444b1ebeb3",
            "ingress": [],
            "name": "naesb-dlt-dev-db-lambda",
            "name_prefix": "",
            "owner_id": "094458522773",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-016db0b3da943c5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}